Closed Bug 778195 Opened 14 years ago Closed 14 years ago

DrawTargetCairo.cpp:764: error: 'memcpy' was not declared in this scope

Categories

(Core :: Graphics, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file)

I guess string.h is missing for memcpy...
Assignee: nobody → romaxa
Attachment #646616 - Flags: review?(ncameron)
Attachment #646616 - Flags: review?(ncameron) → review?(jmuizelaar)
Comment on attachment 646616 [details] [diff] [review] Add string.h to cover memcpy include Please put <string.h> above the local includes
Attachment #646616 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Thanks for fixing this. Could you give more details about the error, in particular which platform it showed up on? And why this wasn't caught by our build bots? Thanks!
Also, I know we have problems including some of the standard libraries on mac, does that include string.h?
https://hg.mozilla.org/integration/mozilla-inbound/rev/74c9c20b284a Romaxa, please make sure that qnew = -U is set in your .hgrc [defaults] section.
Flags: in-testsuite-
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
And please address review comments...
(In reply to Nick Cameron [:nrc] from comment #3) > Thanks for fixing this. Could you give more details about the error, in > particular which platform it showed up on? And why this wasn't caught by our > build bots? Thanks! For me it fails to build on Maemo/Meego and ubuntu arm oneiric (linux)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: