Bug 778195 - Add string.h to cover memcpy include and fix build error. r=nrc