gfx/2d/DrawTargetCairo.cpp
@@ -11,6 +11,7 @@
 #include "ScaledFontBase.h"
 
 #include "cairo.h"
+#include <string.h>
 
 #include "Blur.h"
 #include "Logging.h"
